--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "e2e": "ng e2e",
     "start_android": "ionic build && ionic cap copy && ionic cap sync && ionic cap run android -l --external",
     "start_ios": "ionic build && ionic cap copy && ionic cap sync && ionic cap run ios -l --external",
-    "start_web": "ionic serve"
+    "start_web": "ionic serve",
+    "prettier": "prettier --write '**/*.{ts,scss,html}'"
   },
   "private": true,
   "dependencies": {
@@ -55,6 +56,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "prettier": "^2.1.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
