--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start_android": "ionic build && ionic cap copy && ionic cap sync && ionic cap run android -l --external",
     "start_ios": "ionic build && ionic cap copy && ionic cap sync && ionic cap run ios -l --external",
     "start_web": "ionic serve",
-    "prettier": "prettier --write '**/*.{ts,scss,html}'"
+    "prettier": "prettier --write '**/*.{ts,scss,html}'",
+    "update_graphql": "npx apollo-codegen download-schema https://48p1r2roz4.sse.codesandbox.io --output src/schema.json && npx apollo-codegen generate 'src/**/*.ts' --tag-name 'gql' --schema src/schema.json --target typescript --output src/graphql_interfaces.ts"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +24,7 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@apollo/client": "^3.0.0",
     "@capacitor/android": "^2.4.1",
     "@capacitor/core": "2.4.1",
     "@capacitor/ios": "^2.4.1",
@@ -33,12 +35,12 @@
     "@ionic/angular": "^5.0.0",
     "@ionic/pwa-elements": "^3.0.1",
     "apollo-angular": "^2.0.4",
+    "apollo-codegen": "^0.20.2",
     "graphql": "^15.3.0",
     "phonegap-nfc": "^1.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "@apollo/client": "^3.0.0"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.0",
@@ -53,6 +55,7 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "apollo": "^2.30.3",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
