--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "~10.0.0",
+    "@angular/cdk": "^10.2.2",
     "@angular/common": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
+    "@angular/material": "^10.2.2",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
@@ -37,6 +40,7 @@
     "apollo-angular": "^2.0.4",
     "apollo-codegen": "^0.20.2",
     "graphql": "^15.3.0",
+    "ionic2-calendar": "^0.6.6",
     "phonegap-nfc": "^1.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
