--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "start_ios": "ionic build && ionic cap copy && ionic cap sync && ionic cap run ios -l --external",
     "start_web": "ionic serve",
     "prettier": "prettier --write '**/*.{ts,scss,html}'",
-    "update_graphql": "npx apollo-codegen download-schema https://48p1r2roz4.sse.codesandbox.io --output src/schema.json && npx apollo-codegen generate 'src/**/*.ts' --tag-name 'gql' --schema src/schema.json --target typescript --output src/graphql_interfaces.ts"
+    "update_graphql": "npx apollo-codegen download-schema http://localhost:5102/ --output src/schema.json && npx apollo-codegen generate 'src/**/*.ts' --tag-name 'gql' --schema src/schema.json --target typescript --output src/graphql_interfaces.ts"
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "~10.0.0",
+    "@angular/cdk": "^10.2.2",
     "@angular/common": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
+    "@angular/material": "^10.2.2",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
@@ -37,6 +40,7 @@
     "apollo-angular": "^2.0.4",
     "apollo-codegen": "^0.20.2",
     "graphql": "^15.3.0",
+    "ionic2-calendar": "^0.6.6",
     "phonegap-nfc": "^1.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
