Feature/create club (#5)
* created mutation service

* Create club mutation

* Changes to create club

* Styled create club

* Create club form done

* Added tests for create club page

* PR comments resolved

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start_ios": "ionic build && ionic cap copy && ionic cap sync && ionic cap run ios -l --external",
     "start_web": "ionic serve",
     "prettier": "prettier --write '**/*.{ts,scss,html}'",
-    "graphql": "apollo client:codegen --target typescript --endpoint http://localhost:5102/ --outputFlat src/graphql_interfaces.ts"
+    "update_graphql": "apollo client:codegen --target typescript --endpoint http://localhost:5102/ --outputFlat src/graphql_interfaces.ts"
   },
   "private": true,
   "dependencies": {
