--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^12.11.1",
+    "@types/stripe-checkout": "^1.0.3",
+    "@types/stripe-v3": "^3.1.21",
     "apollo": "^2.30.3",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
