--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "phonegap-nfc": "^1.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "waait": "^1.0.5",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
