--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,7 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": [],
+    "types": [
+      "stripe-v3"
+    ],
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
