--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/pwa-elements": "^3.0.1",
+    "angular-calendar": "^0.28.22",
     "apollo-angular": "^2.0.4",
     "apollo-codegen": "^0.20.2",
+    "date-fns": "^2.16.1",
     "dayjs": "^1.9.1",
     "graphql": "^15.3.0",
     "ionic2-calendar": "^0.6.6",
