--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@apollo/client": "^3.0.0",
+    "@aspnet/signalr": "^1.1.4",
     "@capacitor/android": "^2.4.1",
     "@capacitor/core": "2.4.1",
     "@capacitor/ios": "^2.4.1",
@@ -37,12 +38,15 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/pwa-elements": "^3.0.1",
+    "angular-calendar": "^0.28.22",
     "apollo-angular": "^2.0.4",
     "apollo-codegen": "^0.20.2",
+    "date-fns": "^2.16.1",
     "dayjs": "^1.9.1",
     "graphql": "^15.3.0",
     "ionic2-calendar": "^0.6.6",
     "jwt-decode": "^3.0.0",
+    "ng-pick-datetime": "^7.0.0",
     "phonegap-nfc": "^1.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
