--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start_android": "ionic build && ionic cap copy && ionic cap sync && ionic cap run android -l --external",
     "start_ios": "ionic build && ionic cap copy && ionic cap sync && ionic cap run ios -l --external",
     "start_web": "ionic serve",
+    "stripe": ".././stripe listen --forward-to localhost:5112/webhook",
     "prettier": "prettier --write '**/*.{ts,scss,html}'",
     "update_graphql": "apollo client:codegen --target typescript --endpoint http://localhost:5102/ --outputFlat src/graphql_interfaces.ts"
   },
