--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -13,6 +13,8 @@
   "cordova": {},
   "server": {
     "url": "http://192.168.87.140:8100",
-    "cleartext": true
+    "cleartext": true,
+    "originalUrl": "http://192.168.87.140:8100",
+    "originalCleartext": true
   }
 }
