--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@capacitor/core": "2.4.1",
         "@capacitor/ios": "^2.4.1",
         "@ionic-native/core": "^5.0.0",
+        "@ionic-native/google-nearby": "^5.29.0",
         "@ionic-native/nfc": "^5.28.0",
         "@ionic-native/splash-screen": "^5.0.0",
         "@ionic-native/status-bar": "^5.0.0",
@@ -44,6 +45,7 @@
         "angular-calendar": "^0.28.22",
         "apollo-angular": "^2.0.4",
         "apollo-codegen": "^0.20.2",
+        "cordova-plugin-google-nearby": "^1.1.6",
         "date-fns": "^2.16.1",
         "dayjs": "^1.9.1",
         "graphql": "^15.3.0",
@@ -88,5 +90,10 @@
         "tslint": "~6.1.0",
         "typescript": "~3.9.5"
     },
-    "description": "An Ionic project"
+    "description": "An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-google-nearby": {}
+        }
+    }
 }
