--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -13,8 +13,6 @@
   "cordova": {},
   "server": {
     "url": "http://192.168.87.140:8100",
-    "cleartext": true,
-    "originalUrl": "http://192.168.87.140:8100",
-    "originalCleartext": true
+    "cleartext": true
   }
 }
