--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -10,11 +10,5 @@
       "launchShowDuration": 0
     }
   },
-  "cordova": {},
-  "server": {
-    "url": "http://192.168.87.140:8100",
-    "cleartext": true,
-    "originalUrl": "http://192.168.87.140:8100",
-    "originalCleartext": true
-  }
+  "cordova": {}
 }
