--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
         "angular-calendar": "^0.28.22",
         "apollo-angular": "^2.0.4",
         "apollo-codegen": "^0.20.2",
-        "cordova-plugin-google-nearby": "^1.1.6",
         "date-fns": "^2.16.1",
         "dayjs": "^1.9.1",
         "graphql": "^15.3.0",
@@ -76,6 +75,7 @@
         "@types/stripe-v3": "^3.1.21",
         "apollo": "^2.30.3",
         "codelyzer": "^6.0.0",
+        "cordova-plugin-google-nearby": "git+https://github.com/EventMS/cordova-plugin-google-nearby.git",
         "jasmine-core": "~3.5.0",
         "jasmine-spec-reporter": "~5.0.0",
         "karma": "~5.0.0",
