--- a/plugins/cordova-plugin-google-nearby/package.json
+++ b/plugins/cordova-plugin-google-nearby/package.json
@@ -1,27 +1,24 @@
 {
-  "_from": "cordova-plugin-google-nearby",
-  "_id": "cordova-plugin-google-nearby@1.1.6",
+  "_from": "git+https://github.com/EventMS/cordova-plugin-google-nearby.git",
+  "_id": "cordova-plugin-google-nearby@1.1.5",
   "_inBundle": false,
-  "_integrity": "sha512-L4XJtp3QsO72rMfBYpOP7pN8o5FOkCoXefRxQ5dyYMI4XVqHhIT6vXhOJa5XntM4ztPYC8RNPpFaPIvKCpPJgg==",
+  "_integrity": "",
   "_location": "/cordova-plugin-google-nearby",
   "_phantomChildren": {},
   "_requested": {
-    "type": "tag",
-    "registry": true,
-    "raw": "cordova-plugin-google-nearby",
-    "name": "cordova-plugin-google-nearby",
-    "escapedName": "cordova-plugin-google-nearby",
-    "rawSpec": "",
-    "saveSpec": null,
-    "fetchSpec": "latest"
+    "type": "git",
+    "raw": "https://github.com/EventMS/cordova-plugin-google-nearby",
+    "rawSpec": "https://github.com/EventMS/cordova-plugin-google-nearby",
+    "saveSpec": "git+https://github.com/EventMS/cordova-plugin-google-nearby.git",
+    "fetchSpec": "https://github.com/EventMS/cordova-plugin-google-nearby.git",
+    "gitCommittish": null
   },
   "_requiredBy": [
-    "#USER",
-    "/"
+    "#DEV:/",
+    "#USER"
   ],
-  "_resolved": "https://registry.npmjs.org/cordova-plugin-google-nearby/-/cordova-plugin-google-nearby-1.1.6.tgz",
-  "_shasum": "04d89f1fe6fcd8b0e9f29ebaaa460b46d03325d1",
-  "_spec": "cordova-plugin-google-nearby",
+  "_resolved": "git+https://github.com/EventMS/cordova-plugin-google-nearby.git#4c4f7ff4ac3d7d6e1ddc87101bc5197febcf58fb",
+  "_spec": "https://github.com/EventMS/cordova-plugin-google-nearby",
   "_where": "/home/simon/source/WebApp",
   "author": "",
   "bugs": {
@@ -45,5 +42,5 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "1.1.6"
+  "version": "1.1.5"
 }
