everything is doing the worky work

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
         "start_android": "ionic build && ionic cap copy && ionic cap sync && ionic cap run android -l --external",
         "start_ios": "ionic build && ionic cap copy && ionic cap sync && ionic cap run ios -l --external",
         "start_web": "ionic serve",
-        "stripe": ".././stripe listen --forward-to localhost:5112/webhook",
-        "ngrok": ".././ngrok http -host-header=rewrite 5102",
+        "stripe": ".././stripe listen --forward-to http://34.120.17.251/api/webhook",
+        "ngrok": ".././ngrok http://34.120.17.251/api/",
         "prettier": "prettier --write '**/*.{ts,scss,html}'",
-        "update_graphql": "apollo client:codegen --target typescript --endpoint http://localhost:5102/ --outputFlat src/graphql_interfaces.ts"
+        "update_graphql": "apollo client:codegen --target typescript --endpoint http://34.120.17.251/api/ --outputFlat src/graphql_interfaces.ts"
     },
     "private": true,
     "dependencies": {
