--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
   - name: gcr.io/cloud-builders/docker
     args:
-      ["build", "-t", "eventms/frontend:dev", "."]
+      ["build", "-t", "gcr.io/$PROJECT_ID/${_SERVICE_NAME}:${SHORT_SHA}", "."]
 
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "eventms/frontend:dev"]
+    args: ["push", "gcr.io/$PROJECT_ID/${_SERVICE_NAME}"]
 
   - name: "gcr.io/cloud-builders/gcloud"
     args:
