--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -12,7 +12,9 @@
   },
   "cordova": {},
   "server": {
-    "url": "http://192.168.87.125:8100",
-    "cleartext": true
+    "url": "http://192.168.87.140:8100",
+    "cleartext": true,
+    "originalUrl": "http://192.168.87.125:8100",
+    "originalCleartext": true
   }
 }
