event list of participants

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -10,9 +10,5 @@
       "launchShowDuration": 0
     }
   },
-  "cordova": {},
-  "server": {
-    "url": "http://192.168.87.140:8100",
-    "cleartext": true
-  }
+  "cordova": {}
 }
