--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,18 +1,20 @@
 {
-    "linuxAndroidStudioPath": "/snap/android-studio/current/android-studio/bin/studio.sh",
-    "appId": "io.ionic.starter",
-    "appName": "WebApp",
-    "bundledWebRuntime": false,
-    "npmClient": "npm",
-    "webDir": "www",
-    "plugins": {
-        "SplashScreen": {
-            "launchShowDuration": 0
-        }
-    },
-    "cordova": {},
-    "server": {
-        "url": "http://192.168.87.125:8100",
-        "cleartext": true
+  "linuxAndroidStudioPath": "/snap/android-studio/current/android-studio/bin/studio.sh",
+  "appId": "io.ionic.starter",
+  "appName": "WebApp",
+  "bundledWebRuntime": false,
+  "npmClient": "npm",
+  "webDir": "www",
+  "plugins": {
+    "SplashScreen": {
+      "launchShowDuration": 0
     }
+  },
+  "cordova": {},
+  "server": {
+    "url": "http://192.168.87.140:8100",
+    "cleartext": true,
+    "originalUrl": "http://192.168.87.140:8100",
+    "originalCleartext": true
+  }
 }
