--- a/package.json
+++ b/package.json
@@ -1,102 +1,103 @@
 {
-    "name": "WebApp",
-    "version": "0.0.1",
-    "author": "Ionic Framework",
-    "homepage": "https://ionicframework.com/",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "build-prod": "ng build --prod",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e",
-        "start_android": "ionic build && ionic cap copy && ionic cap sync && ionic cap run android -l --external",
-        "start_ios": "ionic build && ionic cap copy && ionic cap sync && ionic cap run ios -l --external",
-        "start_web": "ionic serve",
-        "stripe": ".././stripe listen --forward-to http://34.120.17.251/api/webhook",
-        "stripe_local": ".././stripe listen --forward-to http://localhost:5112/webhook",
-        "ngrok": ".././ngrok http -host-header=rewrite 5102",
-        "prettier": "prettier --write '**/*.{ts,scss,html}'",
-        "update_graphql": "apollo client:codegen --target typescript --endpoint http://34.120.17.251/api/ --outputFlat src/graphql_interfaces.ts",
-        "update_graphql_localhost": "apollo client:codegen --target typescript --endpoint http://localhost:5102/ --outputFlat src/graphql_interfaces.ts"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "~10.0.0",
-        "@angular/cdk": "^10.2.2",
-        "@angular/common": "~10.0.0",
-        "@angular/core": "~10.0.0",
-        "@angular/forms": "~10.0.0",
-        "@angular/material": "^10.2.2",
-        "@angular/platform-browser": "~10.0.0",
-        "@angular/platform-browser-dynamic": "~10.0.0",
-        "@angular/router": "~10.0.0",
-        "@apollo/client": "^3.0.0",
-        "@aspnet/signalr": "^1.1.4",
-        "@capacitor/android": "^2.4.1",
-        "@capacitor/core": "2.4.1",
-        "@capacitor/ios": "^2.4.1",
-        "@ionic-native/core": "^5.0.0",
-        "@ionic-native/google-nearby": "^5.29.0",
-        "@ionic-native/nfc": "^5.28.0",
-        "@ionic-native/splash-screen": "^5.0.0",
-        "@ionic-native/status-bar": "^5.0.0",
-        "@ionic/angular": "^5.0.0",
-        "@ionic/pwa-elements": "^3.0.1",
-        "angular-calendar": "^0.28.22",
-        "apollo-angular": "^2.0.4",
-        "apollo-codegen": "^0.20.2",
-        "date-fns": "^2.16.1",
-        "dayjs": "^1.9.1",
-        "graphql": "^15.3.0",
-        "ionic-tooltips": "^4.0.0-beta.0",
-        "ionic2-calendar": "^0.6.6",
-        "jwt-decode": "^3.0.0",
-        "ng-pick-datetime": "^7.0.0",
-        "phonegap-nfc": "^1.2.0",
-        "rxjs": "~6.5.5",
-        "tslib": "^2.0.0",
-        "waait": "^1.0.5",
-        "zone.js": "~0.10.3"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~0.1000.0",
-        "@angular/cli": "10.0.8",
-        "@angular/compiler": "~10.0.0",
-        "@angular/compiler-cli": "~10.0.0",
-        "@angular/language-service": "~10.0.0",
-        "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-        "@capacitor/cli": "2.4.1",
-        "@graphql-codegen/cli": "1.17.8",
-        "@ionic/angular-toolkit": "^2.3.3",
-        "@types/jasmine": "~3.5.0",
-        "@types/jasminewd2": "~2.0.3",
-        "@types/jwt-decode": "^2.2.1",
-        "@types/node": "^12.11.1",
-        "@types/stripe-checkout": "^1.0.3",
-        "@types/stripe-v3": "^3.1.21",
-        "apollo": "^2.30.3",
-        "codelyzer": "^6.0.0",
-        "cordova-plugin-google-nearby": "git+https://github.com/EventMS/cordova-plugin-google-nearby.git",
-        "jasmine-core": "~3.5.0",
-        "jasmine-spec-reporter": "~5.0.0",
-        "karma": "~5.0.0",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage-istanbul-reporter": "~3.0.2",
-        "karma-firefox-launcher": "^1.3.0",
-        "karma-jasmine": "~3.3.0",
-        "karma-jasmine-html-reporter": "^1.5.0",
-        "prettier": "^2.1.1",
-        "protractor": "~7.0.0",
-        "ts-node": "~8.3.0",
-        "tslint": "~6.1.0",
-        "typescript": "~3.9.5"
-    },
-    "description": "An Ionic project",
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-google-nearby": {}
-        }
+  "name": "WebApp",
+  "version": "0.0.1",
+  "author": "Ionic Framework",
+  "homepage": "https://ionicframework.com/",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "build-prod": "ng build --prod",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "start_android": "ionic build && ionic cap copy && ionic cap sync && ionic cap run android -l --external",
+    "start_ios": "ionic build && ionic cap copy && ionic cap sync && ionic cap run ios -l --external",
+    "start_web": "ionic serve",
+    "stripe": ".././stripe listen --forward-to http://34.120.17.251/api/webhook",
+    "stripe_local": ".././stripe listen --forward-to http://localhost:5112/webhook",
+    "ngrok": ".././ngrok http -host-header=rewrite 5102",
+    "prettier": "prettier --write '**/*.{ts,scss,html}'",
+    "update_graphql": "apollo client:codegen --target typescript --endpoint http://34.120.17.251/api/ --outputFlat src/graphql_interfaces.ts",
+    "update_graphql_localhost": "apollo client:codegen --target typescript --endpoint http://localhost:5102/ --outputFlat src/graphql_interfaces.ts"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~10.0.0",
+    "@angular/cdk": "^10.2.2",
+    "@angular/common": "~10.0.0",
+    "@angular/core": "~10.0.0",
+    "@angular/forms": "~10.0.0",
+    "@angular/material": "^10.2.2",
+    "@angular/platform-browser": "~10.0.0",
+    "@angular/platform-browser-dynamic": "~10.0.0",
+    "@angular/router": "~10.0.0",
+    "@apollo/client": "^3.0.0",
+    "@aspnet/signalr": "^1.1.4",
+    "@capacitor/android": "^2.4.1",
+    "@capacitor/core": "2.4.1",
+    "@capacitor/ios": "^2.4.1",
+    "@ionic-native/core": "^5.0.0",
+    "@ionic-native/google-nearby": "^5.29.0",
+    "@ionic-native/nfc": "^5.28.0",
+    "@ionic-native/splash-screen": "^5.0.0",
+    "@ionic-native/status-bar": "^5.0.0",
+    "@ionic/angular": "^5.0.0",
+    "@ionic/pwa-elements": "^3.0.1",
+    "angular-calendar": "^0.28.22",
+    "apollo-angular": "^2.0.4",
+    "apollo-codegen": "^0.20.2",
+    "date-fns": "^2.16.1",
+    "dayjs": "^1.9.1",
+    "graphql": "^15.3.0",
+    "ionic-tooltips": "^4.0.0-beta.0",
+    "ionic2-calendar": "^0.6.6",
+    "jwt-decode": "^3.0.0",
+    "ng-pick-datetime": "^7.0.0",
+    "phonegap-nfc": "^1.2.0",
+    "rxjs": "~6.5.5",
+    "tslib": "^2.0.0",
+    "waait": "^1.0.5",
+    "zone.js": "~0.10.3"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1000.0",
+    "@angular/cli": "10.0.8",
+    "@angular/compiler": "~10.0.0",
+    "@angular/compiler-cli": "~10.0.0",
+    "@angular/language-service": "~10.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@capacitor/cli": "2.4.1",
+    "@graphql-codegen/cli": "1.17.8",
+    "@ionic/angular-toolkit": "^2.3.3",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/jwt-decode": "^2.2.1",
+    "@types/node": "^12.11.1",
+    "@types/stripe-checkout": "^1.0.3",
+    "@types/stripe-v3": "^3.1.21",
+    "apollo": "^2.30.3",
+    "codelyzer": "^6.0.0",
+    "cordova-plugin-google-nearby": "git+https://github.com/EventMS/cordova-plugin-google-nearby.git",
+    "capacitor-google-nearby-messages": "https://github.com/trancee/capacitor-google-nearby-messages.git",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-firefox-launcher": "^1.3.0",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "prettier": "^2.1.1",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~3.9.5"
+  },
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-google-nearby": {}
     }
+  }
 }
