--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -11,7 +11,9 @@
     }
   },
   "server": {
-    "url": "http://192.168.87.140:8100",
-    "cleartext": true
+    "url": "http://192.168.8.173:8100",
+    "cleartext": true,
+    "originalUrl": "http://192.168.87.104:8100",
+    "originalCleartext": true
   }
 }
