--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -12,8 +12,6 @@
   },
   "server": {
     "url": "http://192.168.8.173:8100",
-    "cleartext": true,
-    "originalUrl": "http://192.168.87.104:8100",
-    "originalCleartext": true
+    "cleartext": true
   }
 }
