--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -9,5 +9,11 @@
     "SplashScreen": {
       "launchShowDuration": 0
     }
+  },
+  "server": {
+    "url": "http://192.168.87.104:8100",
+    "cleartext": true,
+    "originalUrl": "http://192.168.87.104:8100",
+    "originalCleartext": true
   }
 }
